--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,11 +3,11 @@ pipeline {
 
     stages {
 	stage('Checkout') {
-    //        steps {
-   //             checkout([$class: 'GitSCM', branches: [[name: '*/master']], 
-   //                       userRemoteConfigs: [[url: 'https://github.com/wildanazman/devops_assignment.git']]])
-   //         }
-    //    }
+           steps {
+                checkout([$class: 'GitSCM', branches: [[name: '*/master']], 
+                         userRemoteConfigs: [[url: 'https://github.com/wildanazman/devops_assignment.git']]])
+           }
+       }
 
         stage('Build and Test') {
             steps {
