--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,12 +2,12 @@ pipeline {
     agent any
 
     stages {
-	stage('Checkout') {
-           steps {
-                checkout([$class: 'GitSCM', branches: [[name: '*/master']], 
-                         userRemoteConfigs: [[url: 'https://github.com/wildanazman/devops_assignment.git']]])
-           }
-       }
+//	stage('Checkout') {
+ //          steps {
+//                checkout([$class: 'GitSCM', branches: [[name: '*/master']], 
+ //                        userRemoteConfigs: [[url: 'https://github.com/wildanazman/devops_assignment.git']]])
+//           }
+//       }
 
         stage('Build and Test') {
             steps {
