--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
             steps {
                 script {
                   
-                   
+                   sh 'cd /var/jenkins_home/workspace/jnkins '
                     
                     sh 'docker-compose up -d'  // Run docker-compose up -d
 
