--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
                   
                    sh 'cd /var/jenkins_home/workspace/jnkins '
                     
-                    sh 'docker-compose up -d'  // Run docker-compose up -d
+                    sh 'docker compose up -d'  // Run docker-compose up -d
 
                 }
             }
