--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
 //           }
 //       }
 
-        stage('Build and Test') {
+        stage('Build') {
             steps {
                 script {
                   
