--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,13 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    user: root
     restart: always
     ports:
       - "8080:8080"
       - "50000:50000"
     volumes:
-      - /home/wildan/assignment/Jenkins/jenkins-volume:/var/jenkins_home
+      - ./jenkins-volume:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock 
     networks:
       - mynetwork
