--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,24 +2,12 @@ pipeline {
     agent any
 
     stages {
-	stage('Checkout') {
-          steps {
-               checkout([$class: 'GitSCM', branches: [[name: '*/master']], 
-                        userRemoteConfigs: [[url: 'https://github.com/wildanazman/devops_assignment.git']]])
-           }
-      }
-
         stage('Build') {
             steps {
-                script {
-                  
-                   sh '''
-                    cd /var/jenkins_home/workspace/jnkins 
-                    
-                    docker compose up -d // Run docker-compose up -d
-
-                    '''
-                }
+                sh '''
+                cd /var/jenkins_home/workspace/jnkins 
+                docker-compose up -d
+                '''
             }
         }
     }
