--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
             steps {
                 sh '''
                 cd /var/jenkins_home/workspace/jnkins 
-                docker-compose up -d
+                docker compose up -d
                 '''
             }
         }
