--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,21 +1,16 @@
 pipeline {
     agent any
-environment {
-        // Define the Python version to install
-        PYTHON_VERSION = '3.9.5'
-    }
+
 
     stages {
         stage('Build') {
             steps {
-                // Install Python and necessary packages
+              
                 sh '''
                 apt-get update
-                apt-get install -y python${PYTHON_VERSION}
-                python${PYTHON_VERSION} -m pip install --upgrade pip
-                python${PYTHON_VERSION} -m pip install pytest
-                # Install any other necessary dependencies
-                '''
+                apt-get install -y python3.9
+                python3.9 -m pip install --upgrade pip
+                python3.9 -m pip install pytest
             }
         }
     
