--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,8 +5,8 @@ pipeline {
         stage('Build') {
             steps {
                 sh '''
-                sudo apt-get update
-                sudo apt-get install -y python3 python3-venv python3-pip
+                apt-get update
+                apt-get install -y python3 python3-venv python3-pip
                 python3 -m venv /venv
                 source /venv/bin/activate
                 pip3 install pytest selenium
