--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
                 apt-get update
                 apt-get install -y python3 python3-venv python3-pip
                 python3 -m venv /venv
-                source /venv/bin/activate
+                . /venv/bin/activate
                 pip3 install pytest selenium
                 '''
             }
