--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         stage('Test') {
             steps {
                 sh '''
-                docker-compose up -d
+                docker compose up -d
                 sleep 15
                 python3 test_devopstest.py
                 '''
